--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/ldrs@1.0.2/dist/ldrs.js"
+      defer
+    ></script>
     <title>Portfolio</title>
   </head>
   <body>
